--- a/modalToFindTech.html
+++ b/modalToFindTech.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1" или initial-scale=1.0>
 	<title>Document</title>
 </head>
 <body>
@@ -24,13 +25,19 @@
 		<div class="modalBlock-text">Напишите, какая техника вам нужна,<br>
 		и продавцы сами свяжутся с вами</div>
 		<div class="inputs">	
-			<input type="text" class="h40 modalBlock-inp-name" placeholder="Ваше имя" >
-			<input type="text" class="h40 modalBlock-inp-phone" placeholder="Телефон" >
-			<input type="text" class="h40 modalBlock-inp-adress" placeholder="Адрес, где необходима техника" >
-			<textarea placeholder="Подробнее о технике, которую ищете" cols="30" rows="5" class="h170 modalBlock-inp-note"></textarea>
+			<input type="text" class="h40 modalBlock-inp-name" placeholder="Ваше имя"
+			onfocus="this.placeholder=''"
+			onblur="this.placeholder='Ваше имя'">
+			<input type="tel" class="h40 modalBlock-inp-phone" placeholder="Телефон"
+			onfocus="this.placeholder=''"
+			onblur="this.placeholder='Телефон'" >
+			<input type="text" class="h40 modalBlock-inp-adress"placeholder="Адрес, где необходима техника"
+			onfocus="this.placeholder=''"
+			onblur="this.placeholder='Адрес, где необходима техника'" >
+			<textarea placeholder="Подробнее о технике, которую ищете" cols="30" rows="5" class="h170 modalBlock-inp-note"
+			onfocus="this.placeholder=''"
+			onblur="this.placeholder='Подробнее о технике, которую ищете'"></textarea>
 		</div>
-			
-			<!-- onfocus="this.placeholder=''" -->
 		<div class="modalBlock-confirm">
 			<input type="checkbox" checked class="checkbox" style="width: 5%;margin:0px 5px 0px 0px;">
 			<div class="modalBlock-confirm-text">Я принимаю <a href="https://corp.exkavator.ru/agreement.html">условия соглашения</a> и <a href="https://corp.exkavator.ru/agreement.html">политики конфиденциальности</a></div>
@@ -40,20 +47,19 @@
 </body>
 <style type="text/css">
 	body {background-color: #5d6b78; margin: 0 auto;}
-
-
-	.modalBlock{
+	
+	.modalBlock{	
 		margin: 0 auto;
 		width: 350px; 
-		height: 570px;
-		padding: 50px;
+		height: auto;
+		padding: 50px 50px 50px 50px;
 		text-align: center;
 		background-color: #fff;
 		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	}
 	.modalBlock-title{
 		font-size: 26px;
-	 font-weight: bold;
+	    font-weight: bold;
 	}
 	.modalBlock-text{
 		padding: 25px 20px 25px 20px;
@@ -70,14 +76,15 @@
 		padding-left: 20px; 
 		border-radius: 4px; 
 		font-size: 15px;
+		-o-text-overflow: ellipsis;
 		text-overflow: ellipsis;
 	}
 	/*видимый инпут велью при клике вне */
-	.modalBlock input; textarea
+	/*.modalBlock input; textarea
 		:focus::-webkit-input-placeholder {color: transparent}
 		:focus::-moz-placeholder          {color: transparent}
 		:focus:-moz-placeholder           {color: transparent}
-		:focus:-ms-input-placeholder      {color: transparent}
+		:focus:-ms-input-placeholder      {color: transparent}*/
       
 	.modalBlock-inp-note{
 		width: 100%; 
@@ -90,7 +97,9 @@
 		line-height: 2;
 	}
 	.modalBlock-confirm{
-		font-size: 12px; 
+		font-size: 12px;
+		display: -webkit-box; 
+		display: -ms-flexbox;  
 		display: flex; 
 		padding:10px 0px 30px 0px; 
 		text-align: left;
@@ -115,16 +124,22 @@
 		margin: -40px 0px 0px 370px;
 /*отступы для более ровной траектории*/
 		padding: 3px 0px 0px 0px;
-		transition: transform .8s ease-in-out; 
+		-webkit-transition: -webkit-transform .8s ease-in-out;
+		transition: -webkit-transform .8s ease-in-out;
+		-o-transition: transform .8s ease-in-out;
+		transition: transform .8s ease-in-out;
+		transition: transform .8s ease-in-out, -webkit-transform .8s ease-in-out;  
 		position:relative; 
 }
 .closeButton:hover {
+   -webkit-transform: rotate(270deg);
+   -ms-transform: rotate(270deg);
    transform: rotate(270deg); 
    cursor: pointer;
 }
 
 @media screen and (max-width: 480px) {
-  .modalBlock{ width: 100%;padding: 20px 8px 50px 8px;height: auto;}
+  .modalBlock{ width: 100%;padding: 20px 8px 50px; height: auto;}
 	.modalBlock input{ padding-left: 0px;font-size: 26px;
 text-align: center; color: #707070;}
 	.modalBlock-inp-note{ padding-left: 0px; font-size: 24px;
@@ -136,6 +151,9 @@ text-align: center; color: #707070;}
 	.modalBlock-title{font-size: 22px;}
   }
 
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+   .modalBlock {padding-top:0px;}
+}
 </style>
 </html>
 
