--- a/icons.html
+++ b/icons.html
@@ -6,22 +6,20 @@
 </head>
 <body>
 	<div class="iconsblock">
-		<!-- whatsapp -->
-		<a href="https://api.whatsapp.com/send?phone=375297530155"><div class="iconsblock-item w"></div></a>
-			
-		<!-- viber -->
-		<a href="viber://add?number=375297530155"><div class="iconsblock-item v"></div></a>
-			
-		<!-- telega -->
-		<a href="tg:resolve?domain=nickname"><div class="iconsblock-item t"></div></a>
-
-		<!-- skype -->
-		<a href="skype:nickname?chat"><div class="iconsblock-item s"></div></a>
-
-		<!-- fb -->
-		<a href="https://www.facebook.com"><div class="iconsblock-item f"></div></a>
-			
-	</div>
+		<a href="https://api.whatsapp.com/send?phone=375297530155" target="_blank"><div class="iconsblock-item w"></div></a>
+		<a href="viber://chat?number=375297530155" id="vb_pk"><div class="iconsblock-item v"></div></a>
+		<a href="viber://add?number=375297530155" id="vb_mb"><div class="iconsblock-item v"></div></a>
+		<style>	  
+                #vb_mb{display:none;}
+                @media (max-width:1024px){
+                #vb_pk{display:none;}
+                #vb_mb{display:block;}
+                }
+		</style>
+		<a href="https://t.me/Exkavatorru"><div class="iconsblock-item t"></div></a>
+		<a href="skype:tradeexkavatorru?chat"><div class="iconsblock-item s"></div></a>
+		<a href="https://m.me/exkavator.ru" target="_blank"><div class="iconsblock-item f"></div></a>
+         </div>
 </body>
 </html>
 
