--- a/englishPage.html
+++ b/englishPage.html
@@ -142,6 +142,7 @@ header{display: flex;}
         future perfect in the past = нереальный результат 
         If I would known about your decease, I would have visited you at the hospital.
       </p>
+      <hr>
       <p><b>Future in the past</b>, это время описывает прошедшие события, относящиеся к будущему, распространено в разговорной речи,
         I knew you would help him ( я знал что ты ему поможешь). I thought it would be easier</p>
      <p><b>There is/are</b> юзается когда нужно сказать что какой-то чел или предмет в каком то месте,
@@ -226,6 +227,54 @@ header{display: flex;}
              I am getting used to working in the office. Привыкаю работать в офисе.</p>
            <p>Прилагательные с окончанием ing описывают качества, свойства и характеристики предмета или человека,
               прилагательные на ed указывают на чувства, эмоции или состояние человека. A boring film. A bored boy.</p>
+              <hr>
+              <h3>Предлоги</h3>
+              <h4>Предлоги места</h4>
+              <p>
+                at - в помещении или вблизи чл <br>
+              on - на какой либо поверхности <br>
+              in - регион, город, мир в целом <br>
+              at/in - город как пункт назначения <br>
+              </p>
+              <h4>Предлоги времени</h4>
+              <p>Предлоги времени не употребляются со словами типа next, last, tomorrow, yesterday, one, any, every, each, some, all</p>
+              <p>in - долгие периоды,месяц, год <br>
+                on - день, дата, опред день, праздник <br>
+                at - время по часам, полночь, обед и тд <br>
+                since - с (если указан опред момент) <br>
+                for - на протяжении <br>
+                for a while - какое то время <br>
+                from/till from/to - начало\окончание действия <br>
+                during - в течении (когда происходило) <br>
+                within - не позднее (до опред момента) <br>
+                by - к опред моменту <br>
+              </p>
+              <p><b>During vs for</b>  <br>
+                Чтобы определить что ставить задаем вопрос, <br>
+                Когда? During the holidays. Как долго? For six weeks.
+                <b>By vs within</b> <br>
+                within - между периодами,
+                by - когда указан опред момент
+              </p>
+              <h4>Предлоги направления</h4>
+              <p>
+                across - через (поперек) реку <br>
+                over - через (препятствие) забор <br>
+                through - через (сквозь) туннель  <br>
+              </p>
+              <hr>
+              <h3>Фразовые глаголы</h3>
+              <p>
+                <b>1. гл + предлог</b>, между ними ничего нельзя поставить за предлогом обязательно идет сужествительное или местоимение,
+                 отвечающее на вопрос кого, что. <br>
+                <b>2. гл + наречие</b> употребляется и с существительным и самостоятельно, break down/ turn down my offer, 
+                существительное межно ставить как угодно,
+                Swithced on the radio = switched radio on <br>
+                <b>3. гл + наречие + предлог</b>, после него всегда существительное или местоимение. 
+                We ran out of fuel. We ran out of it.
+              </p>
+              
+
   </div>
 
   <div id="Speech" class="tabcontent">
@@ -289,7 +338,8 @@ header{display: flex;}
         Still (nonetheless) — тем не менее, так или иначе <br> 
         However — однако</p>
         <h3>Наиболее популярные обороты в деловом общении</h3>
-        <p class="col2">professional development — профессиональное развитие <br>
+        <p class="col2">
+          professional development — профессиональное развитие <br>
           extensive experience — обширный опыт <br>
           to assist with — помогать с <br>
           to collaborate with — сотрудничать с <br>
@@ -331,7 +381,15 @@ header{display: flex;}
           Compromising — идущий на компромисс <br>
           Diligent — старательный <br>
           Open-minded — с широким кругозором <br>
-          Have a good sense of humor — имею хорошее чувство юмора</p>
+          Have a good sense of humor — имею хорошее чувство юмора
+          to get through - дозвониться
+          to dial a number - набрать номер
+          to cradle - положить трубку
+          to run down - разрядиться
+          inverted commas - кавычки
+          comma - запятая
+          colon/semicon - :/;
+        </p>
       <p>
         <b>Пример ответа, который описывает features</b><br>
         I am strong in Javascript, Python, C++, and automation testing. <br>
@@ -510,7 +568,21 @@ header{display: flex;}
         till next time – до следующего раза <br>
         It’s very kind of you – Это так мило с вашей стороны <br>
         It does you credit – Это делает вам честь <br>
-        I told you all you need to know - я рассказал все что тебе нужно знать</p>
+        I told you all you need to know - я рассказал все что тебе нужно знать <br>
+      Come across - натолкнуться <br>
+      Look down on - смотреть свысока <br>
+      Go back on - дать заднюю <br>
+      Put up with - смириться <br>
+      pop in - заскочить <br>
+      turn down - отклонить <br>
+      Get away with - сойти с рук <br>
+      Come up with - находить решение <br>
+      Get on with - поддерживать <br>
+      Call in for - созвать <br>
+      Drop out of бросать (работу) <br>
+      Chase up - настаивать
+
+      </p>
     </div>
     <div class="delimiter"></div>
     <div class="phrases-cont">
